fixed flex-wrap for header

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 
 header {
   display:flex;
+  flex-wrap: wrap;
   flex: 1;
   position: relative;
   padding: 40px;
